static/default.css
* {
  box-sizing: border-box;
}

a {
  color: dodgerblue;
  text-decoration: none;
}

nav a {
  color: black;
}

nav a:hover {
  text-decoration: underline;
}

body {
  background-color: white;
  color: black;
  font-family: sans-serif;
  font-size: 16pt;
  line-height: 200%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  padding: 2px;
}

details > p {
  margin-left: 2em;
  margin-top: 0;
  font-size: 12pt;
  line-height: 120%;
}

details > summary {
  cursor: pointer;
  list-style: none;
}

.controls {
  display: none;
}

.controls a {
  margin-left: 0.5em;
}

details[open] .controls {
  display: inline;
}

.control-aside {
  cursor: pointer;
  float: right;
}

summary:hover > .controls {
  display: inline;
}

img {
  vertical-align: text-top;
}

.nav-heading {
  font-family: monospace;
  font-weight: bold;
}

/* Colapse menu labels in mobile portrait mode. */
nav .label {
  display: none;
}

/* Arrange navigation on the left side for wide screens. */
@media (min-aspect-ratio: 1/1) {
  nav {
    float: left;
  }

  nav a {
    display: block;
  }

  nav p {
    margin-top: 1em;
  }

  nav span {
    display: none;
  }

  main {
    float: left;
    margin-left: 5vw;
  }
}

/* Only show navigation labels on wide displays. */
@media (min-width: 960px) {
  nav span, nav .label {
    display: inline;
  }

  nav img {
    margin-right: 0.5em;
  }

  main {
    min-width: 640px;  /* Makes float:right look better */
  }
}

/* Everybody loves dark mode these days. */
@media (prefers-color-scheme: dark) {
  nav a {
    color: white;
  }

  body {
    background-color: #333333;
    color: white;
  }

  img {
    filter: invert(100%);
  }
}

